--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm-run-all --parallel \"dev:*\"",
+    "dev:node": "cross-env NODE_ENV=development nodemon --require ./msw/server.js --watch ./msw/server.js",
+    "dev:next": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,6 +16,10 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -27,17 +33,28 @@
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@mswjs/data": "^0.13.0",
+    "@mswjs/http-middleware": "^0.8.0",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
+    "express": "^4.18.2",
+    "faker": "^6.6.6",
+    "morgan": "^1.10.0",
+    "msw": "^1.2.1",
+    "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
