--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/ui/modal.jsx", "app/projects/page.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/ui/modal.jsx", "app/projects/page.js", "stories/Button.stories.ts"],
   "exclude": ["node_modules"]
 }
