--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -38,6 +40,13 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@mswjs/data": "^0.13.0",
     "@mswjs/http-middleware": "^0.8.0",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/nextjs": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -49,6 +58,7 @@
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "express": "^4.18.2",
     "faker": "^6.6.6",
@@ -58,6 +68,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "storybook": "^7.0.20",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
