--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@cintui/*": ["cintui/*"]
     },
     "plugins": [
       {
@@ -24,6 +25,6 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/ui/modal.jsx", "app/projects/page.js", "stories/Button.stories.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "cintui/modal.jsx", "app/projects/page.js", "stories/Button.stories.ts"],
   "exclude": ["node_modules"]
 }
