--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@cintui/*": ["cintui/*"]
+      "@cintui/*": ["./cintui/*"]
     },
     "plugins": [
       {
@@ -25,6 +25,6 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "cintui/modal.jsx", "app/projects/page.js", "stories/Button.stories.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
