--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.244.0",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
