--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.244.0",
     "next": "^13.4.4",
+    "next-intl": "2.15.0-beta.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
